<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prepod.DobavPrepoda"
    android:background="#1F75FE">

    <EditText
        android:id="@+id/editTextIma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/knopka"
        android:ems="10"
        android:hint="Имя"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFam" />

    <EditText
        android:id="@+id/editTextOtch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/knopka"
        android:ems="10"
        android:hint="Отчество"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIma" />

    <EditText
        android:id="@+id/editTextFam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/knopka"
        android:ems="10"
        android:hint="Фамилия"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/knopka"
        android:ems="10"
        android:hint="Логин"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOtch" />

    <TextView
        android:id="@+id/textViewParol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/knopka"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/knopka"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewParol" />

    <Button
        android:id="@+id/DobavitPrepoda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ZaregisterPrepod"
        android:text="@string/dobavpr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/Izmenit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izmenitpr"
        android:onClick="ZaregisterPrepod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DobavitPrepoda" />

    <Button
        android:id="@+id/Obnulit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ydalitpr"
        android:onClick="Obnulit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Izmenit" />

</androidx.constraintlayout.widget.ConstraintLayout>